--- a/frontend-game/src/index.css
+++ b/frontend-game/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/minecraftia');
 
 /* Global pixel font */
 * {
-  font-family: 'Orbitron', 'Press Start 2P', monospace;
+  font-family: 'Minecraftia', 'Press Start 2P', monospace;
   font-weight: 700;
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
