--- a/frontend-game/src/index.css
+++ b/frontend-game/src/index.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.cdnfonts.com/css/minecraftia');
 
 /* Global pixel font */
 * {
-  font-family: 'Minecraftia', 'Press Start 2P', monospace;
+  font-family: 'Minecraftia', monospace;
   font-weight: 700;
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
@@ -311,7 +310,7 @@ body {
 
 /* Retro title effect */
 .retro-title {
-  font-family: 'Orbitron', monospace;
+  font-family: 'Minecraftia', monospace;
   font-weight: 900;
   color: #ff00ff;
   text-shadow: 
@@ -347,7 +346,7 @@ body {
 
 /* Arcade text style */
 .arcade-text {
-  font-family: 'Orbitron', monospace;
+  font-family: 'Minecraftia', monospace;
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 2px;
